--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                     <!-- Slider btn -->
                                    <div class="slider-btns">
                                         <!-- Hero-btn -->
-                                        <a data-animation="fadeInLeft" data-delay="1.0s" href="industries.html" class="btn radius-btn">Télécharger</a>
+                                        <a data-animation="fadeInLeft" data-delay="1.0s" href="Longoka.apk" class="btn radius-btn">Télécharger</a>
                                         <!-- Video Btn -->
                                         <a data-animation="fadeInRight" data-delay="1.0s" class="popup-video video-btn ani-btn" href="https://www.youtube.com/watch?v=1aP-TXUpNoU"><i class="fas fa-play"></i></a>
                                    </div>
