--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
        </div>
         <!-- Header End -->
     </header>
-
+<iframe paddingTop="20" paddingBottom="20" width="560" height="315" src="https://www.youtube.com/embed/s37uPo7vHnQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <main>
 
           <div class="slider-area ">
@@ -89,12 +89,11 @@
                                     <h1 data-animation="fadeInUp" data-delay=".6s">Revise tes cours,<br>Tes notes<br>avec Longoka</h1>
                                     <p data-animation="fadeInUp" data-delay=".8s">Avec son interface de messagerie, l'application Longoka te permet de reviser instantanément tes cours où tes notions dans tous les domaines disponibles. Que tu sois professionnel  ou encore académique, Longoka est l'outil qu'il te faut!</p>
                                     <!-- Slider btn -->
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/s37uPo7vHnQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                    <div class="slider-btns">
                                         <!-- Hero-btn -->
                                         <a data-animation="fadeInLeft" data-delay="1.0s" href="Longoka.apk" class="btn radius-btn">Télécharger</a>
-                                        <!-- Video Btn -->
-                                        <a data-animation="fadeInRight" data-delay="1.0s" class="popup-video video-btn ani-btn" href="https://www.youtube.com/watch?v=1aP-TXUpNoU"><i class="fas fa-play"></i></a>
+                                       <!-- Video Btn -->
+
                                    </div>
                                 </div>
                             </div>
