--- a/contact.html
+++ b/contact.html
@@ -188,7 +188,7 @@
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-email"></i></span>
                             <div class="media-body">
-                                <h3>longoka@gmail.com</h3>
+                                <h3>longokacontact@gmail.com</h3>
                                 <p>Envoyez nous un email à tout moment!</p>
                             </div>
                         </div>
