--- a/index.html
+++ b/index.html
@@ -93,10 +93,9 @@
                                     <h1 data-animation="fadeInUp" data-delay=".6s">Revise tes cours,<br>Tes notes<br>avec Longoka</h1>
                                     <p data-animation="fadeInUp" data-delay=".8s">Avec son interface de messagerie, l'application Longoka te permet de reviser instantanément tes cours où tes notions dans tous les domaines disponibles. Que tu sois professionnel  ou encore académique, Longoka est l'outil qu'il te faut!</p>
                                     <!-- Slider btn -->
-					<div class="fb-post" data-href="https://www.facebook.com/longokapage/posts/112644963808915" data-show-text="true" data-width="">
-		    <blockquote cite="https://developers.facebook.com/longokapage/posts/112644963808915" class="fb-xfbml-parse-ignore">
-			    <p>Révise tes cours, des définitions, tes notions et bien d'autres plus rapidement grâce à longoka</p>Posted by <a href="https://www.facebook.com/longokapage/">Longoka</a> on&nbsp;<a href="https://developers.facebook.com/longokapage/posts/112644963808915">Friday, June 5, 2020</a></blockquote></div>
-
+					<div class="fb-post" data-href="https://www.facebook.com/longokapage/posts/112952950444783" data-show-text="true" data-width=""><blockquote cite="https://developers.facebook.com/longokapage/posts/112952950444783" class="fb-xfbml-parse-ignore">
+						<p>Révise tes cours, tes notions plus rapidement dans tous les domaines disponibles.</p>Posted by <a href="https://www.facebook.com/longokapage/">Longoka</a> on&nbsp;<a href="https://developers.facebook.com/longokapage/posts/112952950444783">Saturday, June 6, 2020</a></blockquote></div>
+					
 					
                                    <div class="slider-btns">
                                         <!-- Hero-btn -->
