--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="themify-icons-1.css">
     <link rel="stylesheet" href="themify-icons.css">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-1105741630002156",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 
 <body><!-- Preloader Start -->
@@ -39,6 +46,7 @@
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
                     <img src="logo.png" alt="">
+			
                 </div>
             </div>
         </div>
